<resources>
    <string name="app_name">Mobile Functioning</string>
    <string name="action_settings">Settings</string>
    <string name="healing_hospital">Healing Hospital</string>
    <string name="cardio">Cardio</string>
    <string name="cardiac_information">cardiac_</string>
    <string name="arrhythmia">Arrythmia</string>
    <string name="cardiac_surgery">Cardiac Surgery</string>
    <string name="careers">Careers</string>
    <string name="pay_your_bill">bill</string>
    <string name="login">Login</string>
    <string name="patient_and_visitor">patient</string>
    <string name="medical_services">services</string>
    <string name="find_a_doctor">doctor</string>
    <string name="doctor">Doctor</string>
    <string name="cancer">Cancer</string>
    <string name="neurosciences">neuro</string>
    <string name="orthopedic">orthopedic</string>
    <string name="title_activity_cardiac2">Cardiac2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="back">Back</string>
    <string name="appointment">Appointments and videos</string>
    <string name="title_activity_orthopedic2">Orthopedic2</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_cancer2">Cancer2</string>
    <string name="title_activity_neurosci">Neurosci</string>
    <string name="title_activity_doctor">Doctor</string>
    <string name="title_activity_medical">Medical</string>
    <string name="title_activity_patient">Patient</string>
    <string name="title_activity_careers">Careers</string>
    <string name="title_activity_billing">Billing</string>
    <string name="title_activity_searchable">searchable</string>
    <string name="app_label">label</string>
    <string name="title_activity_">Activity</string>

</resources>
