<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <Button
            android:id="@+id/button"
            android:layout_width="65dp"
            android:layout_height="32dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:onClick="@string/healing_hospital"
            android:text="@string/login"
            tools:layout_editor_absoluteX="316dp"
            tools:layout_editor_absoluteY="16dp" />

        <EditText
            android:id="@+id/editText3"
            android:layout_width="222dp"
            android:layout_height="46dp"
            android:layout_marginStart="94dp"
            android:layout_marginLeft="94dp"
            android:layout_marginTop="90dp"
            android:layout_marginEnd="95dp"
            android:layout_marginRight="95dp"
            android:layout_marginBottom="50dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:onClick="@string/healing_hospital"
            android:text="Cardiac Information"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/editText13"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editText13"
            android:layout_width="90dp"
            android:layout_height="51dp"
            android:layout_marginStart="160dp"
            android:layout_marginLeft="160dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="161dp"
            android:layout_marginRight="161dp"
            android:layout_marginBottom="31dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/arrhythmia"
            app:layout_constraintBottom_toTopOf="@+id/editText14"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText3" />

        <EditText
            android:id="@+id/editText15"
            android:layout_width="120dp"
            android:layout_height="41dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="Heart Failure"
            tools:layout_editor_absoluteX="145dp"
            tools:layout_editor_absoluteY="386dp" />

        <EditText
            android:id="@+id/editText16"
            android:layout_width="126dp"
            android:layout_height="43dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="Heart Disease"
            tools:layout_editor_absoluteX="145dp"
            tools:layout_editor_absoluteY="454dp" />

        <EditText
            android:id="@+id/editText14"
            android:layout_width="140dp"
            android:layout_height="47dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/cardiac_surgery"
            tools:layout_editor_absoluteX="135dp"
            tools:layout_editor_absoluteY="297dp" />

        <EditText
            android:id="@+id/editText38"
            android:layout_width="63dp"
            android:layout_height="42dp"
            android:layout_marginStart="6dp"
            android:layout_marginLeft="6dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="247dp"
            android:layout_marginRight="247dp"
            android:layout_marginBottom="683dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>
